Fixing navbar menu items display on mobile devices.

--- a/public/stylesheets/layout/Navbar.module.css
+++ b/public/stylesheets/layout/Navbar.module.css
@@ -176,6 +176,11 @@
     background-color: var(--background-sub-color);
     box-shadow: var(--box-shadow);
 }
+.navbar > .links > li > ul > li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .navbar > .links > li > ul > li + li {
     border-top: var(--border);
 }
